@@ -9,7 +9,7 @@
 # We now support reloading of externally modified documented
 # (eg, presumably by some other process, such as source control or
 # another editor.
-# We also suport auto-loading of externally modified files.
+# We also support auto-loading of externally modified files.
 # - if the current document has not been modified in this
 # editor, but has been modified on disk, then the file
 # can be automatically reloaded.
@@ -19,7 +19,6 @@
 
 import re
 
-import regex
 import win32api
 import win32con
 import win32ui
@@ -36,8 +35,8 @@ from .document import EditorDocumentBase as ParentEditorDocument
 # from pywin.mfc.docview import EditView as ParentEditorView
 # from pywin.mfc.docview import Document as ParentEditorDocument
 
-patImport = regex.symcomp(r"import \(<name>.*\)")
-patIndent = regex.compile(r"^\([ \t]*[~ \t]\)")
+patImport = re.compile(r"import (?P<name>.*)")
+patIndent = re.compile(r"^([ \t]*[~ \t])")
 
 ID_LOCATE_FILE = 0xE200
 ID_GOTO_LINE = 0xE2001
@@ -364,9 +363,10 @@ class EditorView(ParentEditorView):
         # look for a module name
         line = self._obj_.GetLine().strip()
         flags = win32con.MF_STRING | win32con.MF_ENABLED
-        if patImport.match(line) == len(line):
+        matchResult = patImport.match(line)
+        if matchResult and matchResult[0] == line:
             menu.AppendMenu(
-                flags, ID_LOCATE_FILE, "&Locate %s.py" % patImport.group("name")
+                flags, ID_LOCATE_FILE, "&Locate %s.py" % matchResult.group("name")
             )
             menu.AppendMenu(win32con.MF_SEPARATOR)
         menu.AppendMenu(flags, win32ui.ID_EDIT_UNDO, "&Undo")
