@@ -145,8 +145,7 @@ class dirpath:
 
 
 # Group(1) is the filename, group(2) is the lineno.
-# regexGrepResult=regex.compile(r"^\([a-zA-Z]:.*\)(\([0-9]+\))")
-# regexGrep=re.compile(r"^([a-zA-Z]:[^(]*)\((\d+)\)")
+# regexGrep = re.compile(r"^([a-zA-Z]:[^(]*)\((\d+)\)")
 regexGrep = re.compile(r"^(..[^\(:]+)?[\(:](\d+)[\):]:?\s*(.*)")
 
 # these are the atom numbers defined by Windows for basic dialog controls
